--- a/zmoney/Views/Base.lproj/Main.storyboard
+++ b/zmoney/Views/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="54X-TW-td8">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TransactionCell" rowHeight="75" id="zrc-JT-lM0" customClass="TransactionCell" customModule="zmoney" customModuleProvider="target">
                                         <rect key="frame" x="20" y="49.5" width="374" height="75"/>
@@ -196,11 +196,11 @@
                         <constraints>
                             <constraint firstItem="54X-TW-td8" firstAttribute="leading" secondItem="Xp6-IV-nRC" secondAttribute="leading" id="cBx-Kk-eaB"/>
                             <constraint firstItem="Xp6-IV-nRC" firstAttribute="trailing" secondItem="54X-TW-td8" secondAttribute="trailing" id="n9D-gz-ZPF"/>
-                            <constraint firstItem="54X-TW-td8" firstAttribute="top" secondItem="dCO-ae-iZR" secondAttribute="top" constant="88" id="pOC-P7-TjZ"/>
+                            <constraint firstItem="54X-TW-td8" firstAttribute="top" secondItem="dCO-ae-iZR" secondAttribute="top" id="pOC-P7-TjZ"/>
                             <constraint firstItem="Xp6-IV-nRC" firstAttribute="bottom" secondItem="54X-TW-td8" secondAttribute="bottom" id="pgj-qQ-1jh"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Latest Transactions" id="3aq-Th-E3g"/>
+                    <navigationItem key="navigationItem" title="Latest Transactions" largeTitleDisplayMode="always" id="3aq-Th-E3g"/>
                     <connections>
                         <outlet property="tableView" destination="54X-TW-td8" id="rTp-Xx-32P"/>
                     </connections>
